# playback_plugins

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  THIRD_PARTY_NOTICES
.github/workflows/: ci.yml
adplug/: CMakeLists.txt  LICENSES  adplug_plugin.cpp
adplug/patches/: a2m-v2-null-pointer-fix.patch  scope-capture.patch
art_of_noise/: CMakeLists.txt  aon_player.c  aon_plugin.c
asap/: CMakeLists.txt  LICENSES  asap_plugin.c
audio_stream/: CMakeLists.txt  LICENSES  audio_stream_plugin.c  decoder.h  decoder_flac.c  decoder_mp3.c  decoder_vorbis.c  decoder_wav.c  metadata.c  metadata.h
ben_daglish/ben_daglish/: README.md  WORKLOG.md
cmake/: DependencyHelpers.cmake
cpsycle/: CMakeLists.txt  LICENSES  cpsycle_plugin.c
eupmini/: CMakeLists.txt  LICENSES  eupmini_plugin.cpp
eupmini/patches/: cstdint-fix.patch
fmplayer/: CMakeLists.txt  LICENSES  fmplayer_plugin.c
furnace/: CMakeLists.txt  LICENSE  LICENSES  README.md  furnace_plugin.cpp
furnace/patches/: adpcm-xq-c.patch  config-cpp.patch  engine-cpp.patch  engine-h.patch  log-cpp.patch  remove-abort-calls.patch  silence-logging.patch  ymf278-missing-includes.patch
fuzz/: CMakeLists.txt  fuzz_aon.c  gen_aon_seed.c
fuzz/corpus/art_of_noise/: minimal.aon
gme/: CMakeLists.txt  LICENSES  gme_plugin.c
hively/: CMakeLists.txt  LICENSES  hively_plugin.c  hvl_replay.c  hvl_replay.h
include/retrovert/: audio_format.h  io.h  log.h  metadata.h  playback.h  rv_types.h  service.h  settings.h
ixalance/: CMakeLists.txt  LICENSE  ixalance_plugin.cpp
ixalance/src/: FileMap.cpp  Mixer2.cpp  Mixer3.cpp  MixerBase.cpp  Module.cpp  Packer.cpp  PlayerCore.cpp  PlayerCore.h  PlayerIXS.cpp  PlayerIXS.h  WaveGen.cpp
klystrack/: CMakeLists.txt  LICENSE  LICENSES  README.md  klystrack_plugin.c
klystrack/patches/: klystron-fix-rwops-leak.patch  scope-capture.patch
klystrack/sdl_shim/: SDL.h  SDL_endian.h  SDL_rwops.h
libkss/: CMakeLists.txt  LICENSES  libkss_plugin.c
libkss/patches/: kssplay-channel-mask-type.patch
libvgm/: CMakeLists.txt  LICENSES  libvgm_plugin.cpp
libvgm/libvgm_src/emu/: scope_capture.h
libvgm/libvgm_src/emu/cores/: ay8910.c  ay8910.h  emu2149.c  emu2149_private.h  fmopn.c  fmopn.h  sn76489.c  sn76489.h  sn76489_private.h  sn76496.c  sn76496.h  ym2612.c  ym2612.h  ym2612_int.h
libvgm/libvgm_src/player/: playera.cpp  playera.hpp  playerbase.cpp  playerbase.hpp  vgmplayer.cpp  vgmplayer.hpp
libvgm/src/: vgm_alloc.c  vgm_alloc.h  vgm_chips.c  vgm_chips.h  vgm_parser.c  vgm_parser.h  vgm_quantize.c  vgm_quantize.h  vgm_timeline.c  vgm_timeline.h
mdxmini/: CMakeLists.txt  LICENSES  mdxmini_plugin.c
mdxmini/patches/: mdxmini-case-insensitive.patch  mdxmini-extern-c.patch  mdxmini-fix-memory-leaks.patch  mdxmini-fix-pcm8-leaks.patch  mdxmini-fix-ym2151-leak.patch  mdxmini-fix-ym2151-reinit-leak.patch  mdxmini-strcasecmp-win32.patch  scope-capture.patch
music_assembler/music_assembler/: README.md  music_assembler.c  music_assembler.h
openmpt/: CMakeLists.txt  LICENSES  openmpt_plugin.cpp
openmpt/patches/: scope-capture.patch
organya/: CMakeLists.txt  LICENSE  LICENSES  README.md  organya_impl.c  organya_plugin.c
organya/patches/: scope-capture.patch
pmdmini/: CMakeLists.txt  LICENSES  pmdmini_plugin.c
pmdmini/patches/: pmdmini-disable-x86asm.patch  pmdmini-narrowing-fix.patch  pmdmini-packed-clang.patch  pmdmini-pointer-compare-fix.patch  scope-capture.patch
pxtone/: CMakeLists.txt  LICENSE  LICENSES  README.md  pxtone_plugin.cpp
pxtone/patches/: scope-capture.patch
sc68/: CMakeLists.txt  LICENSES  config.h  generate_embedded_replays.py  sc68_plugin.c
sc68/include/sc68/: file68.h  file68_api.h  file68_chk.h  file68_err.h  file68_features.h  file68_ice.h  file68_msg.h  file68_opt.h  file68_ord.h  file68_reg.h  file68_rsc.h  file68_str.h  file68_tag.h  file68_tdb.h  (+8 more)
sc68/patches/: scope-capture.patch
scripts/: fuzz.sh
sidmon2/sidmon2/: LICENSE  README.md
sidplayfp/: CMakeLists.txt  LICENSES  sidplayfp_plugin.cpp
sidplayfp/patches/: scope-capture.patch
sonix/: LICENSE
spu/: CMakeLists.txt  LICENSES  README.md  spu_plugin.c
sunvox/: CMakeLists.txt  LICENSES  sunvox_plugin.c
sunvox/patches/: sunvox-no-messagebox.patch
tfmx/: CMakeLists.txt  LICENSES  tfmx_plugin.c
tfmx/src/: CRCLight.cpp  CRCLight.h  Config.h  Decoder.cpp  Decoder.h  DecoderProxy.cpp  DecoderProxy.h  Dump.cpp  Dump.h  Filter.cpp  Filter.h  LamePaulaMixer.cpp  LamePaulaMixer.h  LamePaulaVoice.cpp  LamePaulaVoice.h  MyEndian.h  MyTypes.h  PaulaVoice.cpp  PaulaVoice.h  SmartPtr.h  tfmxaudiodecoder.cpp  tfmxaudiodecoder.h
tfmx/src/Chris/: ByChecksum.cpp  Macro.cpp  MergedFiles.cpp  Modulation.cpp  Pattern.cpp  SamplesFile.cpp  Sequencer.cpp  Songs.cpp  TFMXDecoder.cpp  TFMXDecoder.h
tfmx/src/Jochen/: Analyze.cpp  Analyze.h  COSO.cpp  Envelope.cpp  FC.cpp  HippelDecoder.cpp  HippelDecoder.h  Instrument.cpp  LiveFix.h  MCMD.cpp  ModPack.cpp  Portamento.cpp  Probe.cpp  SMOD.cpp  TFMX.cpp  TFMX7V.cpp  TraitsByChecksum.cpp  Vibrato.cpp
uade/: CMakeLists.txt  LICENSES  uade_plugin.cpp
uade/uade/: eagleplayer.conf
uade/uade/src/: audio.c  newcpu.c  uade.c
uade/uade/src/include/: audio.h
v2m/: CMakeLists.txt  LICENSE  LICENSES  README.md  v2m_plugin.cpp
v2m/patches/: scope-capture.patch  v2m-sound-fixes.patch
xsf/: CMakeLists.txt  LICENSES  README.md  xsf_2sf.c  xsf_2sf.h  xsf_common.h  xsf_gsf.cpp  xsf_gsf.h  xsf_plugin.c  xsf_psf.c  xsf_psf.h  xsf_psf_bios.c  xsf_psf_bios.h  xsf_psflib_bridge.c  xsf_psflib_bridge.h  xsf_qsf.c  xsf_qsf.h  xsf_snsf.cpp  xsf_snsf.h  xsf_ssf.c  xsf_ssf.h  xsf_usf.c  xsf_usf.h
xsf/patches/: highly_experimental-scope-capture.patch  highly_theoretical-arm64-fastcall.patch  lazyusf2-control87-x64.patch  viogsf-arm64-regparm.patch
zxtune/: CMakeLists.txt  LICENSES  zxtune_archive_plugins.cpp  zxtune_plugin.cpp  zxtune_plugins_list.cpp
zxtune/patches/: fix-lexic-analysis-iterator.patch  fix-msvc-iterator-types.patch  fix-parameters-types-self-include.patch  fix-shared-ptr-unique-cxx20.patch  fix-string-view-iterator.patch  scope-capture.patch
